--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -398,7 +398,8 @@
             android:configChanges="uiMode"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" /> <!-- <activity -->
+            android:windowSoftInputMode="adjustResize" />
+        <!-- <activity -->
         <!-- android:name=".view.business.BusinessRegistrationTrackingActivity" -->
         <!-- android:exported="false" -->
         <!-- android:screenOrientation="portrait" -->
@@ -443,13 +444,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".view.IdentityVerificationBindingLayoutActivity"
@@ -492,11 +486,6 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-<!--        <activity-->
-<!--            android:name=".view.business.AddBenificialOwnerActivity"-->
-<!--            android:exported="false"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />-->
         <activity
             android:name=".view.business.BenificialMaillingAddressActivity"
             android:exported="false"
@@ -527,18 +516,6 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
-<!--        <activity-->
-<!--            android:name=".view.business.AddBenifitialOwnerActivity1"-->
-<!--            android:configChanges="uiMode"-->
-<!--            android:exported="true"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />-->
-<!--        <activity-->
-<!--            android:name=".view.business.AddBenifitialOwnerActivity2"-->
-<!--            android:configChanges="uiMode"-->
-<!--            android:exported="false"-->
-<!--            android:screenOrientation="portrait"-->
-<!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />-->
         <activity
             android:name=".view.business.ChooseIdActivity"
             android:configChanges="uiMode"
@@ -563,13 +540,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".view.Business_UserDetailsListenersActivity"
