added two dialog screens and Added getApplicationContext() in AddBeneficialOwnerActivity and removed activity_add_benificial_owner_2 xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -448,7 +448,7 @@
             android:name=".view.IdentityVerificationBindingLayoutActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" /> <!-- //Business -->
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
             android:name=".view.business.GetstartedSuccessAcivity"
             android:exported="false"
