--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 29 12:55:41 IST 2021
-sdk.dir=C\:\\Users\\Ideyalabs\\AppData\\Local\\Android\\Sdk
+#Tue Jan 25 14:37:29 IST 2022
+sdk.dir=C\:\\Users\\ideyaLabs.LAPTOP-3V9DTHTU\\AppData\\Local\\Android\\Sdk
