--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,12 @@ android {
         }
         qa {
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-qa.coyni.com/\"'
-//            buildConfigField 'String', 'URL_PRODUCTION', '\"  \"'
+//            buildConfigField 'String', 'URL_PRODUCTION', '\"http://sat-qa-api-1367964791.us-east-1.elb.amazonaws.com/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://54.204.152.195:9001/\"'
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
-//            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'true'
-            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'true'
+            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'false'
         }
         dev {
             buildConfigField 'String', 'URL_PRODUCTION', '\"http://api-gateway-dev-1893379566.us-east-1.elb.amazonaws.com:80/\"'
@@ -80,7 +79,7 @@ android {
 //            buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
             buildConfigField 'String', 'Country_Code', '\"US\"'
-            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'true'
+            buildConfigField 'boolean', 'SKIP_ENCRYPTION', 'false'
 
         }
     }
