--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Oct 29 12:55:41 IST 2021
-sdk.dir= /Users/ideyalabs/Library/Android/sdk
-
+sdk.dir=C\:\\Users\\Ideyalabs\\AppData\\Local\\Android\\Sdk
