Bug Fixes for Webview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -629,7 +629,7 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
         <activity
-            android:name=".view.business.WebViewActivity"
+            android:name=".view.business.WebViewShowFileActivity"
             android:configChanges="uiMode"
             android:exported="true"
             android:screenOrientation="portrait"
